# cpp-playground

./: .editorconfig  .gitignore  .gitmodules  README.md
catch2-speed-sample/: CMakeLists.txt  conanfile.txt
catch2-speed-sample/src/: catch2_many_assertions.cpp
ocio-conan-dynamic-linking/: README.md  conanfile.py
ocio-conan-dynamic-linking/container/: Dockerfile  build-in-container.bash  setup-docker-and-run.bash
oiio-conan-dynamic-linking/: CMakeLists.txt  README.md  conanfile.py  test.heif
oiio-conan-dynamic-linking/container/: build-in-container.bash  setup-docker-and-run.bash
oiio-conan-dynamic-linking/src/: main.cpp
